--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
-"devDependencies": {
-  "@types/node": "^20.12.12",
-  "@types/react": "^18.3.3",
-  "@types/react-dom": "^18.3.0",
-  "@vitejs/plugin-react": "^4.3.1",
-  "autoprefixer": "^10.4.20",
-  "postcss": "^8.4.41",
-  "tailwindcss": "^3.4.10",
-  "typescript": "^5.5.4",
-  "vite": "^5.4.2"
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
   },
   "engines": {
     "node": ">=18"
