--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@netlify/functions": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
