--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "lucide-react": "*"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
