--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "netlify dev --targetPort=5173 --port=8888",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "browserslist:update": "npx update-browserslist-db@latest"
   },
   "dependencies": {
     "@netlify/functions": "^2.7.0",
@@ -44,7 +46,8 @@
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "netlify-cli": "^17.26.1"
   },
   "engines": {
     "node": ">=18"
