--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,17 @@
   publish = "dist"
   functions = "netlify/functions"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[functions]
+  # Ensure Node 18 runtime
+  node_bundler = "esbuild"
+  external_node_modules = ["@google-cloud/vision", "parse-multipart-data"]
 
-[build.environment]
-  NODE_VERSION = "18"
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
+
+[dev]
+  command = "vite"
+  port = 5173
+  targetPort = 8888
+  functionsPort = 9999
+  publish = "dist"
