--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserslist:update": "npx update-browserslist-db@latest"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.4.0",
     "@netlify/functions": "^2.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.6",
