--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "browserslist:update": "npx update-browserslist-db@latest"
   },
   "dependencies": {
-    "@google-cloud/vision": "^4.4.0",
+    "@google-cloud/vision": "4.3.2",
     "@netlify/functions": "^2.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.6",
