--- a/package.json
+++ b/package.json
@@ -51,5 +51,7 @@
     "vite": "^5.4.2",
     "netlify-cli": "^17.26.1"
   },
-  "engines": { "node": ">=18" }
+  "engines": {
+    "node": ">=18"
+  }
 }
