--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-i18next": "^14.0.1",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0",
+    "stripe": "^14.0.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
