--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.0.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0",
     "stripe": "^14.0.0",
